[package]
name = "rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.3"
parking_lot = "0.12.1"
serde = { version = "1.0.145", features = ["derive"] }
tokio = { version = "1.21.2", features = ["rt", "rt-multi-thread", "macros"] }
